WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205287
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/line-break/line-break-anywhere-004.html
https://bugs.webkit.org/show_bug.cgi?id=205287
Summary
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/line-break/line-b...
alan
Reported
2019-12-16 10:50:41 PST
ssia
Attachments
Patch
(12.17 KB, patch)
2019-12-16 11:00 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-16 10:52:06 PST
<
rdar://problem/57976834
>
alan
Comment 2
2019-12-16 11:00:48 PST
Created
attachment 385787
[details]
Patch
alan
Comment 3
2019-12-16 11:13:55 PST
Committed
r253567
: <
https://trac.webkit.org/changeset/253567
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug