[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/line-break/line-break-anywhere-004.html https://bugs.webkit.org/show_bug.cgi?id=205287 <rdar://problem/57976834>

Reviewed by Antti Koivisto.

Consolidate word break rules into a function to be able to make sure "line-break: anywhere" takes priority over word-break values.

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::LineBreaker::wordBreakBehavior const):
(WebCore::Layout::LineBreaker::tryBreakingTextRun const):
(WebCore::Layout::isTextSplitAtArbitraryPositionAllowed): Deleted.
* layout/inlineformatting/InlineLineBreaker.h:

Canonical link: https://commits.webkit.org/218482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253567 268f45cc-cd09-0410-ab3c-d52691b4dbfc